--- a/.github/workflows/gemini4.yml
+++ b/.github/workflows/gemini4.yml
@@ -24,5 +24,5 @@ jobs:
     - name: Compile Java
       run: |
         cd Thanawich/HolidayTravelVehicles 
-        javac -d . *.java
+        javac -d . App.java
       # Compile java file from directory
